# mapping_tool

./: .gitignore  README.md  example_config_file.json  example_config_file.yaml  integration_test_config.json  main.py  pyproject.toml  requirements.txt
example_configuration_files/: custom_spice_kernel.yaml  hi90_ram_sp_canonical_time_periods.yaml  hi90_ram_sp_custom_time_periods.yaml  ultra90_healpix_spectral_index.yaml
install_scripts/: install.py  mac_install.sh
mapping_tool/: cli.py  config_schema.json  config_schema.py  configuration.py  dependency_collector.py  generate_map.py  hi_map_generator.py  map_generator.py  mapping_tool_descriptor.py
test/: periodically_run_tests.json  test_builders.py  test_cli.py  test_configuration.py  test_dependency_collector.py  test_generate_map.py  test_helpers.py  test_hi_map_generator.py  test_main.py  test_map_generator.py  test_mapping_tool_descriptor.py
test/cdf_files/: l2_ena_20250115.cdf  l2_ena_20250215.cdf
test/example_configuration_files/: example_config.json  integration_test_config.json  test_config.json  test_config_with_optionals.json  test_config_with_optionals.yaml  test_l2_config.json  test_l2_config.yaml  test_l2_config_defined_time_ranges.json  test_l2_config_defined_time_ranges.yaml  test_l3_config.json  test_l3_config.yaml
