[project]
name = "mapping-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "imap-l3-processing",
    "imap-processing>=0.19.0",
    "jsonschema>=4.25.0",
    "pyyaml>=6.0.2",
]

[tool.uv.sources]
imap-l3-processing = { url = "https://github.com/IMAP-Science-Operations-Center/imap_L3_processing/releases/download/v0.0.1/imap_l3_processing-2025.9.11-py3-none-any.whl" }

[tool.setuptools]
py-modules = ["mapping_tool"]

[tool.hatch]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
