[project]
name = "mapping-tool"
version = "0.2.0"
description = "Command line tool for generating skymaps for IMAP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "imap-l3-processing",
    "imap-processing>=1.0.0",
    "jsonschema>=4.25.0",
    "pyyaml>=6.0.2",
]

[tool.uv.sources]
imap-l3-processing = { git = "https://github.com/IMAP-Science-Operations-Center/imap_L3_processing" }
imap-processing = { git = "https://github.com/IMAP-Science-Operations-Center/imap_processing" }

[tool.setuptools]
py-modules = ["mapping_tool"]

[tool.hatch]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
